--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,16 +1,31 @@
 <form [formGroup]="loginForm" #formDir="ngForm" (ngSubmit)="onSubmit(formDir)">
   <div class="form-group">
-    <label for="username">Usuário:</label>
+    <label for="username">E-mail:</label>
     <input
       formControlName="username"
       type="text"
-      placeholder="Digite seu username..."
+      placeholder="Digite seu email..."
       required
     />
+    <div
+      *ngIf="username!.invalid && formDir.submitted"
+      class="validation-error"
+    >
+      <p *ngIf="username!.errors?.['required']">O e-mail é obrigatório</p>
+    </div>
   </div>
   <div class="form-group">
     <label for="password">Senha:</label>
     <input formControlName="password" type="password" placeholder="" required />
+    <div
+      *ngIf="password!.invalid && formDir.submitted"
+      class="validation-error"
+    >
+      <p *ngIf="password!.errors?.['required']">A senha é obrigatória</p>
+    </div>
   </div>
   <input type="submit" value="Login" />
+  <div *ngIf="errorMessage && formDir.submitted" class="validation-error">
+    <p *ngIf="errorMessage">{{ errorMessage }}</p>
+  </div>
 </form>
