--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,12 @@
   border-left: 3px solid #dc3545;
   padding-left: 0.2em;
 }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
