--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<button mat-stroked-button routerLink="login">Login</button>
+<div class="header">
+  <h1 class="title">DemoPark</h1>
+  <button mat-raised-button routerLink="login" class="login-btn">Login</button>
+</div>
